--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_de.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_de.properties
@@ -6,5 +6,6 @@ quicksearch.type.Discussions=Discussions
 quicksearch.type.People=Menschen
 quicksearch.type.Spaces=R\u00E4ume
 quicksearch.type.Events=Veranstaltungen
-quicksearch.type.Tasks=Aufgaben
+quicksearch.type.Tasks=Tasks in Calendar
 quicksearch.type.Answers=Antworten
+quicksearch.type.TasksAddon=Aufgaben
