--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_it.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_it.properties
@@ -6,5 +6,6 @@ quicksearch.type.Discussions=Discussions
 quicksearch.type.People=Persone
 quicksearch.type.Spaces=Spazi
 quicksearch.type.Events=Events
-quicksearch.type.Tasks=Compiti
+quicksearch.type.Tasks=Tasks in Calendar
 quicksearch.type.Answers=Domande/Risposte
+quicksearch.type.TasksAddon=Compiti
