--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_ar.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_ar.properties
@@ -6,8 +6,9 @@ SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=\u0627\u0644\u0623\u0634\u062E\u0627\u0635
 SearchAdmin.type.Spaces=\u0641\u0636\u0627\u0621\u0627\u062A
 SearchAdmin.type.Events=\u0623\u062D\u062F\u0627\u062B
-SearchAdmin.type.Tasks=\u0627\u0644\u0645\u0647\u0627\u0645\u0651
+SearchAdmin.type.Tasks=Tasks in Calendar
 SearchAdmin.type.Answers=\u0627\u0644\u0623\u062C\u0648\u0628\u0629
+SearchAdmin.type.TasksAddon=\u0627\u0644\u0645\u0647\u0627\u0645\u0651
 
 SearchAdmin.action.Enable=Enable
 SearchAdmin.action.Disable=\u062A\u0639\u0637\u064A\u0644
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
