--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_de.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_de.properties
@@ -6,8 +6,9 @@ SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=Menschen
 SearchAdmin.type.Spaces=R\u00E4ume
 SearchAdmin.type.Events=Veranstaltungen
-SearchAdmin.type.Tasks=Aufgaben
+SearchAdmin.type.Tasks=Tasks in Calendar
 SearchAdmin.type.Answers=Antworten
+SearchAdmin.type.TasksAddon=Aufgaben
 
 SearchAdmin.action.Enable=Enable
 SearchAdmin.action.Disable=Deaktivieren
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
