--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_pl.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_pl.properties
@@ -6,8 +6,9 @@ SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=Ludzie
 SearchAdmin.type.Spaces=Obszary
 SearchAdmin.type.Events=Events
-SearchAdmin.type.Tasks=Zadania
+SearchAdmin.type.Tasks=Tasks in Calendar
 SearchAdmin.type.Answers=Odpowiedzi
+SearchAdmin.type.TasksAddon=Zadania
 
 SearchAdmin.action.Enable=W\u0142\u0105cz
 SearchAdmin.action.Disable=Wy\u0142\u0105cz
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
