--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_ru.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_ru.properties
@@ -6,8 +6,9 @@ SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=People
 SearchAdmin.type.Spaces=\u041E\u0431\u043B\u0430\u0441\u0442\u0438
 SearchAdmin.type.Events=Events
-SearchAdmin.type.Tasks=\u0417\u0430\u0434\u0430\u0447\u0438
+SearchAdmin.type.Tasks=Tasks in Calendar
 SearchAdmin.type.Answers=\u041E\u0442\u0432\u0435\u0442\u044B
+SearchAdmin.type.TasksAddon=\u0417\u0430\u0434\u0430\u0447\u0438
 
 SearchAdmin.action.Enable=Enable
 SearchAdmin.action.Disable=\u041E\u0442\u043A\u043B\u044E\u0447\u0438\u0442\u044C
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
