--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_tr.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_tr.properties
@@ -6,8 +6,9 @@ SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=People
 SearchAdmin.type.Spaces=Alanlar
 SearchAdmin.type.Events=Events
-SearchAdmin.type.Tasks=G\u00F6revler
+SearchAdmin.type.Tasks=Tasks in Calendar
 SearchAdmin.type.Answers=Cevaplar
+SearchAdmin.type.TasksAddon=G\u00F6revler
 
 SearchAdmin.action.Enable=Enable
 SearchAdmin.action.Disable=Devre D\u0131\u015F\u0131 B\u0131rak
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
