--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_de.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_de.properties
@@ -7,5 +7,6 @@ unifiedSearch.type.Discussions=Discussions
 unifiedSearch.type.People=Menschen
 unifiedSearch.type.Spaces=R\u00E4ume
 unifiedSearch.type.Events=Veranstaltungen
-unifiedSearch.type.Tasks=Aufgaben
+unifiedSearch.type.Tasks=Tasks in Calendar
 unifiedSearch.type.Answers=Antworten
+unifiedSearch.type.TasksAddon=Aufgaben
