--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_it.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_it.properties
@@ -7,5 +7,6 @@ unifiedSearch.type.Discussions=Discussions
 unifiedSearch.type.People=Persone
 unifiedSearch.type.Spaces=Spazi
 unifiedSearch.type.Events=Events
-unifiedSearch.type.Tasks=Compiti
+unifiedSearch.type.Tasks=Tasks in Calendar
 unifiedSearch.type.Answers=Domande/Risposte
+unifiedSearch.type.TasksAddon=Compiti
