--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_pl.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_pl.properties
@@ -7,5 +7,6 @@ unifiedSearch.type.Discussions=Discussions
 unifiedSearch.type.People=Ludzie
 unifiedSearch.type.Spaces=Obszary
 unifiedSearch.type.Events=Events
-unifiedSearch.type.Tasks=Zadania
+unifiedSearch.type.Tasks=Tasks in Calendar
 unifiedSearch.type.Answers=Odpowiedzi
+unifiedSearch.type.TasksAddon=Zadania
