--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_pt_BR.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_pt_BR.properties
@@ -7,5 +7,6 @@ unifiedSearch.type.Discussions=Discussions
 unifiedSearch.type.People=Pessoas
 unifiedSearch.type.Spaces=Espa\u00E7os
 unifiedSearch.type.Events=Eventos
-unifiedSearch.type.Tasks=Tarefas
+unifiedSearch.type.Tasks=Tasks in Calendar
 unifiedSearch.type.Answers=Respostas
+unifiedSearch.type.TasksAddon=Tarefas
