--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_zh_CN.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_zh_CN.properties
@@ -7,5 +7,6 @@ unifiedSearch.type.Discussions=Discussions
 unifiedSearch.type.People=People
 unifiedSearch.type.Spaces=\u7A7A\u95F4
 unifiedSearch.type.Events=Events
-unifiedSearch.type.Tasks=\u4EFB\u52A1
+unifiedSearch.type.Tasks=Tasks in Calendar
 unifiedSearch.type.Answers=\u7B54\u6848
+unifiedSearch.type.TasksAddon=\u4EFB\u52A1
