--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_ar.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_ar.properties
@@ -6,5 +6,6 @@ quicksearch.type.Discussions=Discussions
 quicksearch.type.People=\u0627\u0644\u0623\u0634\u062E\u0627\u0635
 quicksearch.type.Spaces=\u0641\u0636\u0627\u0621\u0627\u062A
 quicksearch.type.Events=\u0623\u062D\u062F\u0627\u062B
-quicksearch.type.Tasks=\u0627\u0644\u0645\u0647\u0627\u0645\u0651
+quicksearch.type.Tasks=Tasks in Calendar
 quicksearch.type.Answers=\u0627\u0644\u0623\u062C\u0648\u0628\u0629
+quicksearch.type.TasksAddon=\u0627\u0644\u0645\u0647\u0627\u0645\u0651
