--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_cs.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_cs.properties
@@ -6,5 +6,6 @@ quicksearch.type.Discussions=Discussions
 quicksearch.type.People=People
 quicksearch.type.Spaces=Skupiny
 quicksearch.type.Events=Events
-quicksearch.type.Tasks=\u00DAlohy
+quicksearch.type.Tasks=Tasks in Calendar
 quicksearch.type.Answers=Odpov\u011Bdi
+quicksearch.type.TasksAddon=\u00DAlohy
