--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_pl.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_pl.properties
@@ -6,5 +6,6 @@ quicksearch.type.Discussions=Discussions
 quicksearch.type.People=Ludzie
 quicksearch.type.Spaces=Obszary
 quicksearch.type.Events=Events
-quicksearch.type.Tasks=Zadania
+quicksearch.type.Tasks=Tasks in Calendar
 quicksearch.type.Answers=Odpowiedzi
+quicksearch.type.TasksAddon=Zadania
