--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_pt_BR.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_pt_BR.properties
@@ -6,5 +6,6 @@ quicksearch.type.Discussions=Discussions
 quicksearch.type.People=Pessoas
 quicksearch.type.Spaces=Espa\u00E7os
 quicksearch.type.Events=Eventos
-quicksearch.type.Tasks=Tarefas
+quicksearch.type.Tasks=Tasks in Calendar
 quicksearch.type.Answers=Respostas
+quicksearch.type.TasksAddon=Tarefas
