--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_ru.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_ru.properties
@@ -6,5 +6,6 @@ quicksearch.type.Discussions=Discussions
 quicksearch.type.People=People
 quicksearch.type.Spaces=\u041E\u0431\u043B\u0430\u0441\u0442\u0438
 quicksearch.type.Events=Events
-quicksearch.type.Tasks=\u0417\u0430\u0434\u0430\u0447\u0438
+quicksearch.type.Tasks=Tasks in Calendar
 quicksearch.type.Answers=\u041E\u0442\u0432\u0435\u0442\u044B
+quicksearch.type.TasksAddon=\u0417\u0430\u0434\u0430\u0447\u0438
