--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_tr.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_tr.properties
@@ -6,5 +6,6 @@ quicksearch.type.Discussions=Discussions
 quicksearch.type.People=People
 quicksearch.type.Spaces=Alanlar
 quicksearch.type.Events=Events
-quicksearch.type.Tasks=G\u00F6revler
+quicksearch.type.Tasks=Tasks in Calendar
 quicksearch.type.Answers=Cevaplar
+quicksearch.type.TasksAddon=G\u00F6revler
