--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_zh_CN.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_zh_CN.properties
@@ -6,5 +6,6 @@ quicksearch.type.Discussions=Discussions
 quicksearch.type.People=People
 quicksearch.type.Spaces=\u7A7A\u95F4
 quicksearch.type.Events=Events
-quicksearch.type.Tasks=\u4EFB\u52A1
+quicksearch.type.Tasks=Tasks in Calendar
 quicksearch.type.Answers=\u7B54\u6848
+quicksearch.type.TasksAddon=\u4EFB\u52A1
