--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_cs.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_cs.properties
@@ -6,8 +6,9 @@ SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=People
 SearchAdmin.type.Spaces=Skupiny
 SearchAdmin.type.Events=Events
-SearchAdmin.type.Tasks=\u00DAlohy
+SearchAdmin.type.Tasks=Tasks in Calendar
 SearchAdmin.type.Answers=Odpov\u011Bdi
+SearchAdmin.type.TasksAddon=\u00DAlohy
 
 SearchAdmin.action.Enable=Povolit
 SearchAdmin.action.Disable=Zak\u00E1zat
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
