--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_el.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_el.properties
@@ -6,8 +6,9 @@ SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=\u0386\u03C4\u03BF\u03BC\u03B1
 SearchAdmin.type.Spaces=\u03A7\u03CE\u03C1\u03BF\u03B9
 SearchAdmin.type.Events=Events
-SearchAdmin.type.Tasks=\u0395\u03C1\u03B3\u03B1\u03C3\u03AF\u03B5\u03C2
+SearchAdmin.type.Tasks=Tasks in Calendar
 SearchAdmin.type.Answers=\u0395\u03C1\u03C9\u03C4\u03B1\u03C0\u03B1\u03BD\u03C4\u03AE\u03C3\u03B5\u03B9\u03C2
+SearchAdmin.type.TasksAddon=\u0395\u03C1\u03B3\u03B1\u03C3\u03AF\u03B5\u03C2
 
 SearchAdmin.action.Enable=\u0395\u03BD\u03B5\u03C1\u03B3\u03BF\u03C0\u03BF\u03AF\u03B7\u03C3\u03B7
 SearchAdmin.action.Disable=\u0391\u03C0\u03B5\u03BD\u03B5\u03C1\u03B3\u03BF\u03C0\u03BF\u03B9\u03AE\u03C3\u03B7
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
