--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_it.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_it.properties
@@ -6,8 +6,9 @@ SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=Persone
 SearchAdmin.type.Spaces=Spazi
 SearchAdmin.type.Events=Events
-SearchAdmin.type.Tasks=Compiti
+SearchAdmin.type.Tasks=Tasks in Calendar
 SearchAdmin.type.Answers=Domande/Risposte
+SearchAdmin.type.TasksAddon=Compiti
 
 SearchAdmin.action.Enable=Enable
 SearchAdmin.action.Disable=Disattivare
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
