--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_no.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_no.properties
@@ -6,8 +6,9 @@ SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=People
 SearchAdmin.type.Spaces=Fellesskap
 SearchAdmin.type.Events=Events
-SearchAdmin.type.Tasks=Oppgaver
+SearchAdmin.type.Tasks=Tasks in Calendar
 SearchAdmin.type.Answers=Svar
+SearchAdmin.type.TasksAddon=Oppgaver
 
 SearchAdmin.action.Enable=Enable
 SearchAdmin.action.Disable=Deaktiver
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
