--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_pt_BR.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_pt_BR.properties
@@ -6,8 +6,9 @@ SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=Pessoas
 SearchAdmin.type.Spaces=Espa\u00E7os
 SearchAdmin.type.Events=Eventos
-SearchAdmin.type.Tasks=Tarefas
+SearchAdmin.type.Tasks=Tasks in Calendar
 SearchAdmin.type.Answers=Respostas
+SearchAdmin.type.TasksAddon=Tarefas
 
 SearchAdmin.action.Enable=Enable
 SearchAdmin.action.Disable=Desabilitar
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
