--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_zh_CN.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_zh_CN.properties
@@ -6,8 +6,9 @@ SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=People
 SearchAdmin.type.Spaces=\u7A7A\u95F4
 SearchAdmin.type.Events=Events
-SearchAdmin.type.Tasks=\u4EFB\u52A1
+SearchAdmin.type.Tasks=Tasks in Calendar
 SearchAdmin.type.Answers=\u7B54\u6848
+SearchAdmin.type.TasksAddon=\u4EFB\u52A1
 
 SearchAdmin.action.Enable=Enable
 SearchAdmin.action.Disable=\u7981\u7528
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
