--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_cs.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_cs.properties
@@ -7,5 +7,6 @@ unifiedSearch.type.Discussions=Discussions
 unifiedSearch.type.People=People
 unifiedSearch.type.Spaces=Skupiny
 unifiedSearch.type.Events=Events
-unifiedSearch.type.Tasks=\u00DAlohy
+unifiedSearch.type.Tasks=Tasks in Calendar
 unifiedSearch.type.Answers=Odpov\u011Bdi
+unifiedSearch.type.TasksAddon=\u00DAlohy
