--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_ru.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_ru.properties
@@ -7,5 +7,6 @@ unifiedSearch.type.Discussions=Discussions
 unifiedSearch.type.People=People
 unifiedSearch.type.Spaces=\u041E\u0431\u043B\u0430\u0441\u0442\u0438
 unifiedSearch.type.Events=Events
-unifiedSearch.type.Tasks=\u0417\u0430\u0434\u0430\u0447\u0438
+unifiedSearch.type.Tasks=Tasks in Calendar
 unifiedSearch.type.Answers=\u041E\u0442\u0432\u0435\u0442\u044B
+unifiedSearch.type.TasksAddon=\u0417\u0430\u0434\u0430\u0447\u0438
