--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_tr.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_tr.properties
@@ -7,5 +7,6 @@ unifiedSearch.type.Discussions=Discussions
 unifiedSearch.type.People=People
 unifiedSearch.type.Spaces=Alanlar
 unifiedSearch.type.Events=Events
-unifiedSearch.type.Tasks=G\u00F6revler
+unifiedSearch.type.Tasks=Tasks in Calendar
 unifiedSearch.type.Answers=Cevaplar
+unifiedSearch.type.TasksAddon=G\u00F6revler
