PLF-6753: prepare the new form for sharing a document

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_fr.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_fr.properties
@@ -3,3 +3,42 @@
 #############################################################################
 FileActivityChildPlugin.label.FileSize=Taille du fichier
 FileActivityChildPlugin.label.WatchTheVideo=Voir la vid\u00E9o
+
+#############################################################################
+#                         ShareFileToUserPlugin                             #
+#############################################################################
+# For UI
+UINotification.label.ShareFileToUserPlugin=Document Partagé
+UINotification.title.ShareFileToUserPlugin=Un document est partagé avec moi
+# For Subject
+Notification.subject.ShareFileToUserPlugin=$DOCUMENT invitation à $PERMISSION
+# For template
+Notification.title.ShareFileToUserPlugin=Document partagé
+Notification.message.ShareFileToUserPlugin={0} vous a invité à {1} le document suivant
+Notification.intranet.message.ShareFileToUserPlugin={0} vous a invité à {1}
+# For Digest
+Notification.digest.one.ShareFileToUserPlugin=$USER a partagé un document $DOCUMENT avec vous.
+
+#############################################################################
+#                         ShareFileToSpacePlugin                            #
+#############################################################################
+# For UI
+UINotification.label.ShareFileToSpacePlugin=Document Partagé
+UINotification.title.ShareFileToSpacePlugin=Un document est partagé dans l'un de mes espaces
+# For Subject
+Notification.subject.ShareFileToSpacePlugin=$DOCUMENT invitation à $PERMISSION
+# For template
+Notification.title.ShareFileToSpacePlugin=Document partagé
+Notification.message.ShareFileToSpacePlugin={0} vous a invité à {1} le document suivant
+Notification.intranet.message.ShareFileToSpacePlugin={0} vous a invité à {1} dans {2}
+# For Digest
+Notification.digest.one.ShareFileToSpacePlugin=$USER a partagé un document $DOCUMENT avec vous.
+
+#############################################################################
+#                         Common labels                                     #
+#############################################################################
+Notification.label.footer=Si vous ne désirez pas recevoir ces notifications, <a target="_blank" style="margin:30px 0 10px 0; color: #2f5e92;text-decoration: none;font-size:13px;font-family:HelveticaNeue,arial,tahoma,serif" href="{0}">cliquez ici</a> pour modifier vos paramètres de notification.
+Notification.label.team=L'équipe eXo Platform
+Notification.label.CompanyName=eXo Platform
+Notification.label.SayHello=Bonjour
+Notification.label.Open=Ouvrir
