--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
@@ -132,7 +132,7 @@
 	</UIPopupWindow>
 	<UIShareDocuments>
 		<label>
-			<ShareButton>Share</ShareButton>
+			<ShareButton>Apply</ShareButton>
 			<CancelButton>Cancel</CancelButton>
 			<TextAreaInit>Add a comment about to this file...</TextAreaInit>
 			<ShareWith>Share with:</ShareWith>
@@ -140,11 +140,16 @@
 			<SpaceMember>Space Members</SpaceMember>
 			<SelectASpace>Select a Space</SelectASpace>
 			<SharedADocument>shared a document</SharedADocument>
-			<NoSpace>Please select at least one space to share</NoSpace>
+			<WhoHasAccess>Who has access ?</WhoHasAccess>
+			<NoSpace>Please select at least one valid space or user</NoSpace>
+			<NoPermission>You do not have the permission to share this document</NoPermission>
+            <InvalidOwner>You can not change owner permissions</InvalidOwner>
+            <Invalid>Space or user not found: {0}</Invalid>
 			<option>
 				<read>Can View</read>
 				<modify>Can Edit</modify>
 			</option>
+            <owner>owner</owner>
 		</label>
 	</UIShareDocuments>
 
