--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
@@ -3,3 +3,44 @@
 #############################################################################
 FileActivityChildPlugin.label.FileSize=File Size
 FileActivityChildPlugin.label.WatchTheVideo=Watch the video
+
+
+#############################################################################
+#                         ShareFileToUserPlugin                             #
+#############################################################################
+# For UI
+UINotification.label.ShareFileToUserPlugin=Shared Document
+UINotification.title.ShareFileToUserPlugin=A document is shared with me
+# For Subject
+Notification.subject.ShareFileToUserPlugin=$DOCUMENT invitation to $PERMISSION
+# For template
+Notification.title.ShareFileToUserPlugin=Document shared
+Notification.message.ShareFileToUserPlugin={0} invited you to {1} the following document
+Notification.intranet.message.ShareFileToUserPlugin={0} invited you to {1}
+# For Digest
+Notification.digest.one.ShareFileToUserPlugin=$USER has shared a document $DOCUMENT with you.
+
+#############################################################################
+#                         ShareFileToSpacePlugin                            #
+#############################################################################
+# For UI
+UINotification.label.ShareFileToSpacePlugin=Shared Document in {0}
+UINotification.title.ShareFileToSpacePlugin=A document is shared in one of my spaces
+# For Subject
+Notification.subject.ShareFileToSpacePlugin=$DOCUMENT invitation to $PERMISSION
+# For template
+Notification.title.ShareFileToSpacePlugin=Document shared in {0}
+Notification.message.ShareFileToSpacePlugin={0} invited you to {1} the following document in the space {2}
+Notification.intranet.message.ShareFileToSpacePlugin={0} invited you to {1} in {2}
+# For Digest
+Notification.digest.one.ShareFileToSpacePlugin=$USER has shared a document $DOCUMENT with you.
+
+#############################################################################
+#                         Common labels                                     #
+#############################################################################
+Notification.label.footer=If you do not want to receive such notifications, <a target="_blank" style="margin:30px 0 10px 0; color: #2f5e92;text-decoration: none;font-size:13px;font-family:HelveticaNeue,arial,tahoma,serif" href="{0}">click here</a> to change your notification settings.
+Notification.label.team=The eXo Platform Team
+Notification.label.CompanyName=eXo Platform
+Notification.label.SayHello=Hello
+Notification.label.Open=Open
+
