--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
@@ -135,20 +135,24 @@
 			<ShareButton>Apply</ShareButton>
 			<CancelButton>Cancel</CancelButton>
 			<TextAreaInit>Add a comment about to this file...</TextAreaInit>
-			<ShareWith>Share with:</ShareWith>
+			<ShareWith>Share with</ShareWith>
 			<Access>Access</Access>
 			<SpaceMember>Space Members</SpaceMember>
 			<SelectASpace>Select a Space</SelectASpace>
 			<SharedADocument>shared a document</SharedADocument>
-			<WhoHasAccess>Who has access ?</WhoHasAccess>
+			<WhoHasAccess>Who has access</WhoHasAccess>
 			<NoSpace>Please select at least one valid space or user</NoSpace>
 			<NoPermission>You do not have the permission to share this document</NoPermission>
+            <InvalidEntry>This permission can not be edited</InvalidEntry>
             <InvalidOwner>You can not change owner permissions</InvalidOwner>
             <Invalid>Space or user not found: {0}</Invalid>
 			<option>
 				<read>Can View</read>
 				<modify>Can Edit</modify>
 			</option>
+            <invite>
+                <placeholder>add ...</placeholder>
+            </invite>
             <owner>owner</owner>
 		</label>
 	</UIShareDocuments>
