--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
@@ -39,8 +39,7 @@ Notification.digest.one.ShareFileToSpacePlugin=$USER has shared a document $DOCU
 #                         Common labels                                     #
 #############################################################################
 Notification.label.footer=If you do not want to receive such notifications, <a target="_blank" style="margin:30px 0 10px 0; color: #2f5e92;text-decoration: none;font-size:13px;font-family:HelveticaNeue,arial,tahoma,serif" href="{0}">click here</a> to change your notification settings.
-Notification.label.team=The eXo Platform Team
 Notification.label.CompanyName=eXo Platform
-Notification.label.SayHello=Hello
+Notification.label.SayHello=Hi
 Notification.label.Open=Open
 
