PLF-6753: disable pdf js abbreviations when share popup is opened
PLF-6777: correct the placeholder and fix style

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
@@ -151,7 +151,7 @@
 				<modify>Can Edit</modify>
 			</option>
             <invite>
-                <placeholder>add ...</placeholder>
+                <placeholder>Enter users or spaces names...</placeholder>
             </invite>
             <owner>owner</owner>
 		</label>
