PLF-6796 : change labels

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
@@ -10,7 +10,7 @@ FileActivityChildPlugin.label.WatchTheVideo=Watch the video
 #############################################################################
 # For UI
 UINotification.label.ShareFileToUserPlugin=Shared Document
-UINotification.title.ShareFileToUserPlugin=A document is shared with me
+UINotification.title.ShareFileToUserPlugin=Someone shares a document to me
 # For Subject
 Notification.subject.ShareFileToUserPlugin=$DOCUMENT invitation to $PERMISSION
 # For template
@@ -25,7 +25,7 @@ Notification.digest.one.ShareFileToUserPlugin=$USER has shared a document $DOCUM
 #############################################################################
 # For UI
 UINotification.label.ShareFileToSpacePlugin=Shared Document in {0}
-UINotification.title.ShareFileToSpacePlugin=A document is shared in one of my spaces
+UINotification.title.ShareFileToSpacePlugin=Someone shares a document to a space
 # For Subject
 Notification.subject.ShareFileToSpacePlugin=$DOCUMENT invitation to $PERMISSION
 # For template
