--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_fr.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_fr.properties
@@ -8,8 +8,8 @@ FileActivityChildPlugin.label.WatchTheVideo=Voir la vid\u00E9o
 #                         ShareFileToUserPlugin                             #
 #############################################################################
 # For UI
-UINotification.label.ShareFileToUserPlugin=Document Partagé
-UINotification.title.ShareFileToUserPlugin=Un document est partagé avec moi
+UINotification.label.ShareFileToUserPlugin=Document Partag\u00E9
+UINotification.title.ShareFileToUserPlugin=Quelqu'un a partag\u00E9 un document avec moi
 # For Subject
 Notification.subject.ShareFileToUserPlugin=$DOCUMENT invitation à $PERMISSION
 # For template
@@ -23,8 +23,8 @@ Notification.digest.one.ShareFileToUserPlugin=$USER a partagé un document $DOCU
 #                         ShareFileToSpacePlugin                            #
 #############################################################################
 # For UI
-UINotification.label.ShareFileToSpacePlugin=Document Partagé
-UINotification.title.ShareFileToSpacePlugin=Un document est partagé dans l'un de mes espaces
+UINotification.label.ShareFileToSpacePlugin=Document Partag\u00E9
+UINotification.title.ShareFileToSpacePlugin=Quelqu'un a partag\u00E9 un document dans un espace
 # For Subject
 Notification.subject.ShareFileToSpacePlugin=$DOCUMENT invitation à $PERMISSION
 # For template
