PLF-6798: adjust popup style and correct messages

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
@@ -134,7 +134,7 @@
     <label>
       <ShareButton>Appliquer</ShareButton>
       <CancelButton>Annuler</CancelButton>
-      <TextAreaInit>Laissez un commentaire sur ce fichier...</TextAreaInit>
+      <TextAreaInit>Envoyer un message pour le partage...</TextAreaInit>
       <ShareWith>Partager avec</ShareWith>
       <Access>Accès</Access>
       <SpaceMember>Membres</SpaceMember>
@@ -153,7 +153,7 @@
       <invite>
         <placeholder>Entrez les noms d\'utilisateurs ou espaces...</placeholder>
       </invite>
-      <owner>propriétaire</owner>
+      <owner>Propriétaire</owner>
     </label>
   </UIShareDocuments>
 
