--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
@@ -134,7 +134,7 @@
 		<label>
 			<ShareButton>Apply</ShareButton>
 			<CancelButton>Cancel</CancelButton>
-			<TextAreaInit>Add a comment about to this file...</TextAreaInit>
+			<TextAreaInit>Send a message upon sharing...</TextAreaInit>
 			<ShareWith>Share with</ShareWith>
 			<Access>Access</Access>
 			<SpaceMember>Space Members</SpaceMember>
@@ -147,13 +147,13 @@
             <InvalidOwner>You can not change owner permissions</InvalidOwner>
             <Invalid>Space or user not found: {0}</Invalid>
 			<option>
-				<read>Can View</read>
-				<modify>Can Edit</modify>
+				<read>Can view</read>
+				<modify>Can edit</modify>
 			</option>
             <invite>
                 <placeholder>Enter users or spaces names...</placeholder>
             </invite>
-            <owner>owner</owner>
+            <owner>Owner</owner>
 		</label>
 	</UIShareDocuments>
 
