PLF-6791: add "reply" and "view full discussion" buttons in emails when document is shared in a space

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_fr.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_fr.properties
@@ -41,3 +41,5 @@ Notification.label.footer=Si vous ne désirez pas recevoir ces notifications, <a
 Notification.label.CompanyName=eXo Platform
 Notification.label.SayHello=Bonjour
 Notification.label.Open=Ouvrir
+Notification.label.Reply=Répondre
+Notification.label.ViewFullDiscussion=Voir la discussion complète
