--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
@@ -42,4 +42,5 @@ Notification.label.footer=If you do not want to receive such notifications, <a t
 Notification.label.CompanyName=eXo Platform
 Notification.label.SayHello=Hi
 Notification.label.Open=Open
-
+Notification.label.Reply=Reply
+Notification.label.ViewFullDiscussion=View the full discussion
