--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
@@ -12,7 +12,7 @@ FileActivityChildPlugin.label.WatchTheVideo=Watch the video
 UINotification.label.ShareFileToUserPlugin=Shared Document
 UINotification.title.ShareFileToUserPlugin=Someone shares a document to me
 # For Subject
-Notification.subject.ShareFileToUserPlugin=$DOCUMENT invitation to $PERMISSION
+Notification.subject.ShareFileToUserPlugin=$DOCUMENT invitation to $NOTIF_PERM
 # For template
 Notification.title.ShareFileToUserPlugin=Document shared
 Notification.message.ShareFileToUserPlugin={0} invited you to {1} the following document
@@ -27,7 +27,7 @@ Notification.digest.one.ShareFileToUserPlugin=$USER has shared a document $DOCUM
 UINotification.label.ShareFileToSpacePlugin=Shared Document in {0}
 UINotification.title.ShareFileToSpacePlugin=Someone shares a document to a space
 # For Subject
-Notification.subject.ShareFileToSpacePlugin=$DOCUMENT invitation to $PERMISSION
+Notification.subject.ShareFileToSpacePlugin=$DOCUMENT invitation to $NOTIF_PERM
 # For template
 Notification.title.ShareFileToSpacePlugin=Document shared in {0}
 Notification.message.ShareFileToSpacePlugin={0} invited you to {1} the following document in the space {2}
@@ -44,3 +44,5 @@ Notification.label.SayHello=Hi
 Notification.label.Open=Open
 Notification.label.Reply=Reply
 Notification.label.ViewFullDiscussion=View the full discussion
+Notification.label.view=read
+Notification.label.modify=modify
