--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_fr.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_fr.properties
@@ -11,7 +11,7 @@ FileActivityChildPlugin.label.WatchTheVideo=Voir la vid\u00E9o
 UINotification.label.ShareFileToUserPlugin=Document Partag\u00E9
 UINotification.title.ShareFileToUserPlugin=Quelqu'un a partag\u00E9 un document avec moi
 # For Subject
-Notification.subject.ShareFileToUserPlugin=$DOCUMENT invitation à $PERMISSION
+Notification.subject.ShareFileToUserPlugin=$DOCUMENT invitation pour $NOTIF_PERM
 # For template
 Notification.title.ShareFileToUserPlugin=Document partagé
 Notification.message.ShareFileToUserPlugin={0} vous a invité à {1} le document suivant
@@ -26,7 +26,7 @@ Notification.digest.one.ShareFileToUserPlugin=$USER a partagé un document $DOCU
 UINotification.label.ShareFileToSpacePlugin=Document Partag\u00E9
 UINotification.title.ShareFileToSpacePlugin=Quelqu'un a partag\u00E9 un document dans un espace
 # For Subject
-Notification.subject.ShareFileToSpacePlugin=$DOCUMENT invitation à $PERMISSION
+Notification.subject.ShareFileToSpacePlugin=$DOCUMENT invitation pour $NOTIF_PERM
 # For template
 Notification.title.ShareFileToSpacePlugin=Document partagé
 Notification.message.ShareFileToSpacePlugin={0} vous a invité à {1} le document suivant
@@ -43,3 +43,5 @@ Notification.label.SayHello=Bonjour
 Notification.label.Open=Ouvrir
 Notification.label.Reply=Répondre
 Notification.label.ViewFullDiscussion=Voir la discussion complète
+Notification.label.view=voir
+Notification.label.modify=modifier
