PLF-6835 : update text for selecting file to attach in activity composer

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_ca.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_ca.properties
@@ -16,10 +16,9 @@
 #
 
 UIActivityComposer.label.UIDocActivityComposer=Fitxer
-UIComposerDocumentExtension.label.Select_File=Select File
-UIComposerDocumentExtension.label.Download=Download
-UIComposerDocumentExtension.label.View_File=View
-UIComposerDocumentExtension.label.Version=Version
+UIComposerDocumentExtension.label.Download=Descarrega
+UIComposerDocumentExtension.label.View_File=Veure
+UIComposerDocumentExtension.label.Version=Versi\u00F3
 UIPopupWindow.title.UIOneNodePathSelector=Selector de fitxers
 UIPopupComposer.title.UIDocActivitySelector=Select File
 UIDocActivitySelector.msg.not-a-file=El fitxer no existeix o s'ha produ\u00EFt un error amb el fitxer seleccionat.
