--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_pl.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_pl.properties
@@ -15,9 +15,8 @@
 # along with this program; if not, see<http://www.gnu.org/licenses/>.
 #
 
-UIActivityComposer.label.UIDocActivityComposer=File
-UIComposerDocumentExtension.label.Select_File=Wybierz plik
-UIComposerDocumentExtension.label.Download=Download
+UIActivityComposer.label.UIDocActivityComposer=Plik
+UIComposerDocumentExtension.label.Download=Pobierz
 UIComposerDocumentExtension.label.View_File=Zobacz
 UIComposerDocumentExtension.label.Version=Version
 UIPopupWindow.title.UIOneNodePathSelector=Selektor pliku
