--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_it.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_it.properties
@@ -15,8 +15,7 @@
 # along with this program; if not, see<http://www.gnu.org/licenses/>.
 #
 
-UIActivityComposer.label.UIDocActivityComposer=File
-UIComposerDocumentExtension.label.Select_File=Selezionare il file
+UIActivityComposer.label.UIDocActivityComposer=File Allegato
 UIComposerDocumentExtension.label.Download=Scaricare
 UIComposerDocumentExtension.label.View_File=Visualizzare
 UIComposerDocumentExtension.label.Version=Versione
