--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_nl.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_nl.properties
@@ -16,8 +16,7 @@
 #
 
 UIActivityComposer.label.UIDocActivityComposer=Bestand
-UIComposerDocumentExtension.label.Select_File=Bestand selecteren
-UIComposerDocumentExtension.label.Download=Download
+UIComposerDocumentExtension.label.Download=Downloaden
 UIComposerDocumentExtension.label.View_File=Tonen
 UIComposerDocumentExtension.label.Version=Versie
 UIPopupWindow.title.UIOneNodePathSelector=Bestand Selector
