--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_ro.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_ro.properties
@@ -15,8 +15,7 @@
 # along with this program; if not, see<http://www.gnu.org/licenses/>.
 #
 
-UIActivityComposer.label.UIDocActivityComposer=File
-UIComposerDocumentExtension.label.Select_File=Selecta\u0163i fi\u015Fierul
+UIActivityComposer.label.UIDocActivityComposer=Fi\u015Fier
 UIComposerDocumentExtension.label.Download=Descarc\u0103
 UIComposerDocumentExtension.label.View_File=Afi\u0219are
 UIComposerDocumentExtension.label.Version=Versiune
